--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,11 +1,9 @@
 footer{
-    background-color: #00FF00;
-    height: 60px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 100%;
-    position: absolute;
-    bottom: 0;
+    position: fixed;
+	bottom: 0;
+	background-color: #00FF00;
+	height: 60px;
+	width: 100%;
+	text-align: center;
+	line-height: 30px;
 }
