--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,44 +1,61 @@
-.container .filter{
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
+.filters {
+	background-color: white;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;	
 }
 
-.container .filter button{
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: none;
-    border-radius: 4px;
-    margin-left: auto;
-    margin-right: 30px;
+.locations {
+	display: inline-block;
+	vertical-align: middle;
+
+	height: 100%;
+	width: 25%;
+
+	margin-left: 45px;
+	border-right: 1px solid #DDDDDD;
 }
 
-.container .filter button:hover{
-    opacity: 90%;
+.amenities {
+	display: inline-block;
+	vertical-align: middle;
+
+	height: 100%;
+    width: 25%;
+
+	margin-left: 45px;
 }
 
-.container .filter .locations,
-.container .filter .amenities{
-    height: 100%;
-    width: 25%; 
+h3 {
+	font-weight: 600;
+	margin-top: 12px;
+	margin-bottom: 5px;	
 }
 
-.container .filter .locations{
-    border-right: 1px solid #DDDDDD;
+h4 {
+	font-size: 14px;
+	font-weight: 400;
+	margin-top: 5px;
+	margin-bottom: 12px;
 }
 
-.container .filter h3{
-    font-weight: 600;
+button {
+	color: #FFFFFF;
+	font-size: 18px;
+	
+	height: 48px;
+	width: 20%;
+	background-color: #FF5A5F;
+	border-style: none;
+	border-radius: 4px;
+
+	float: right;
+	margin-top: 11px;
+	margin-bottom: 11px;
+	margin-right: 30px;
 }
 
-.container .filter h4{
-    font-weight: 400;
-    font-size: 14px;
+button:hover {
+	opacity: 90%;
 }
