--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,69 +1,92 @@
-.container .filter{
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+.filters {
+	background-color: white;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;	
     display: flex;
     align-items: center;
 }
 
-.container .filter button{
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: none;
-    border-radius: 4px;
+.locations {
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+	width: 25%;
+	border-right: 1px solid #DDDDDD;
+
+}
+
+.locations h3,
+.locations h4,
+.amenities h3,
+.amenities h4{
+    padding-left: 45px;
+}
+
+.amenities {
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+    width: 25%;
+}
+
+h3 {
+	font-weight: 600;
+	margin-top: 12px;
+	margin-bottom: 5px;	
+}
+
+h4 {
+	font-size: 14px;
+	font-weight: 400;
+	margin-top: 5px;
+	margin-bottom: 12px;
+}
+
+button {
+	color: #FFFFFF;
+	font-size: 18px;
+	height: 48px;
+	width: 20%;
+	background-color: #FF5A5F;
+	border-style: none;
+	border-radius: 4px;
     margin-left: auto;
-    margin-right: 30px;
+	margin-right: 30px;
 }
 
-.container .filter button:hover{
-    opacity: 90%;
+button:hover {
+	opacity: 90%;
 }
 
-.container .filter .locations,
-.container .filter .amenities{
-    height: 100%;
-    width: 25%; 
+.popover {
+	list-style: none;
+	display: none;
+	background-color: #FAFAFA;
+	width: 100%;
+	margin-top: 8px;
+	padding: 25px 0px;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+    z-index: 100;
     position: relative;
 }
 
-.container .filter .locations{
-    border-right: 1px solid #DDDDDD;
+.locations:hover .popover {
+	display: inline-block;
 }
 
-.container .filter h3{
-    font-weight: 600;
+.amenities:hover .popover {
+	display: inline-block;
 }
 
-.container .filter h4{
-    font-weight: 400;
-    font-size: 14px;
+
+li {
+    padding: 15px;
 }
 
-.container .filter .popover{
-    background-color: #FAFAFA;
-    width: 100%;
-    border:  1px solid #DDDDDD;
-    list-style: none;
-    position: absolute;
-    display: none;
-    top: 70px;
-    margin: 0;
-    padding: 0px;
-}
-
-.container .filter .popover li{
-    padding: 5px 35px;
-}
-.container .filter .popover h2{
-    padding: 5px 15px;
-}
-
-.container .filter .locations:hover .popover,
-.container .filter .amenities:hover .popover{
-    display: block;
+.popover h2{
+    padding-left: 10px;
+    line-height: 10px;
 }
